# next_ai

./: .gitignore  README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml  linter.yml
next_ai/: __init__.py  hooks.py
next_ai/ai/: __init__.py  parsing.py  prompt.py  scheduler.py  utils.py
next_ai/docs/: how-to-setup.md
next_ai/fixtures/: custom_html_block.json  nextai_model_info.json  role.json  workspace_link.json
next_ai/next_ai/dashboard_chart/nextai_daily_usage_chart/: nextai_daily_usage_chart.json
next_ai/next_ai/doctype/nextai_model_info/: nextai_model_info.js  nextai_model_info.json  nextai_model_info.py  nextai_model_info_list.js  test_nextai_model_info.py
next_ai/next_ai/doctype/nextai_parsing/: nextai_parsing.js  nextai_parsing.json  nextai_parsing.py  test_nextai_parsing.py
next_ai/next_ai/doctype/nextai_parsing_details/: nextai_parsing_details.js  nextai_parsing_details.json  nextai_parsing_details.py  test_nextai_parsing_details.py
next_ai/next_ai/doctype/nextai_prompt/: nextai_prompt.js  nextai_prompt.json  nextai_prompt.py  test_nextai_prompt.py
next_ai/next_ai/doctype/nextai_settings/: nextai_settings.js  nextai_settings.json  nextai_settings.py  test_nextai_settings.py
next_ai/next_ai/doctype/nextai_usage_log/: nextai_usage_log.js  nextai_usage_log.json  (+2 more)
next_ai/public/js/: next_ai.js
nextai/: hooks.py  modules.txt
nextai/ai/: __init__.py  prompt.py  structured_output.py
nextai/config/: desktop.py  docs.py
nextai/docs/: dependency_resolve.md
nextai/fixtures/: nextai_model_info.json
nextai/public/js/: nextai.js
(+7 files in other folders)
