[project]
name = "NextAI"
authors = [
    { name = "antonykumar15898@gmail.com", email = "antonykumar@gmail.com"}
]
description = "AI Solution"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "langchain-google-genai~=2.1.4"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
